force-app/main/default/objects/Collateral__c/Collateral__c.object-meta.xml
<CustomObject>
    <description>Collateral refers to the different kinds of assets that Contacts pledge as security for a loan.</description>
    <label>Collateral</label>
    <nameField>
        <displayFormat>COL-{000000}</displayFormat>
        <label>Collateral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>