force-app/main/default/objects/Collateral__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing/Mortgage</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>PPSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>