force-app/main/default/objects/Collateral__c/validationRules/Value_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Value must be positive</errorMessage>
</ValidationRule>